--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -3,8 +3,9 @@
 h1, .text-h1
   font-size: 2em
   text-align: center
+  line-height: 1.2em
 
-.body-normal
+body
   font-size: 1em
 
 .body-bigger
@@ -15,12 +16,13 @@ h1, .text-h1
 
 h2, .text-h2
   font-size: 1.8em
+  line-height: 1
 
 .my-card
-  width: 300px
+  width: 400px
 
 .my-btn
   width: 100px
 
 .my-btn-large
-  width: 300px
+  width: 200px
