--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -7,15 +7,10 @@ h1, .text-h1
 
 body
   font-size: 1em
-
-.body-bigger
-  font-size: 1.2em
-
-.body-biggest
-  font-size: 1.5em 
+  background-color: $grey-3
 
 h2, .text-h2
-  font-size: 1.8em
+  font-size: 1.5em
   line-height: 1
 
 .my-card
@@ -26,3 +21,6 @@ h2, .text-h2
 
 .my-btn-large
   width: 200px
+
+.my-red-button
+  background-color: $red-4
